<package format="2">
  <name>qb_chain_description</name>
  <version>1.0.4</version>
  <description>
    This package contains the ROS description for complex chains of qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbchain-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbchain-ros</url>
  <url type="website">http://wiki.ros.org/qb_chain_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>