<package format="2">
  <name>qb_chain_control</name>
  <version>1.0.4</version>
  <description>
    This package contains the ROS node to control multiple qbrobotics® devices simultaneously.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbchain-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbchain-ros</url>
  <url type="website">http://wiki.ros.org/qb_chain_control</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>